# WaydroidSU

./: Cargo.toml  Makefile  README.md
docs/: USAGE.md
src/: cli.rs  constants.rs  container.rs  install.rs  magisk.rs  magisk_files.rs  main.rs  print.rs  selinux.rs  utils.rs
src/res/: bootanim.rc  bootanim_magisk.rc  bootanim_magisk_new.rc  loadpolicy.sh
