[package]
name = "wsu"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "CLI Magisk manager and installer for Waydroid"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
dbus = "0.9.7"
dirs = "6.0.0"
duct = "1.0.0"
flate2 = "1.1.2"
indicatif = "0.17.11"
ini = "1.3.0"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
url = "2.5.4"
which = "8.0.0"
zip = "4.1.0"
